--- a/read_ds_dpp.ipynb
+++ b/read_ds_dpp.ipynb
@@ -3907,7 +3907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -3918,23 +3918,201 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>bottled water</th>\n",
+       "      <th>butter milk</th>\n",
+       "      <th>cat food</th>\n",
+       "      <th>tea</th>\n",
+       "      <th>frozen meals</th>\n",
+       "      <th>sparkling wine</th>\n",
+       "      <th>specialty cheese</th>\n",
+       "      <th>flower (seeds)</th>\n",
+       "      <th>toilet cleaner</th>\n",
+       "      <th>white bread</th>\n",
+       "      <th>...</th>\n",
+       "      <th>9659</th>\n",
+       "      <th>9660</th>\n",
+       "      <th>9661</th>\n",
+       "      <th>9662</th>\n",
+       "      <th>9663</th>\n",
+       "      <th>9664</th>\n",
+       "      <th>9665</th>\n",
+       "      <th>9666</th>\n",
+       "      <th>9667</th>\n",
+       "      <th>9668</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 9835 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "9835"
+       "   bottled water  butter milk  cat food  tea  frozen meals  sparkling wine  \\\n",
+       "0            NaN          NaN       NaN  NaN           NaN             NaN   \n",
+       "1            NaN          NaN       NaN  NaN           NaN             NaN   \n",
+       "2            NaN          NaN       NaN  NaN           NaN             NaN   \n",
+       "3            NaN          NaN       NaN  NaN           NaN             NaN   \n",
+       "4            NaN          NaN       NaN  NaN           NaN             NaN   \n",
+       "\n",
+       "   specialty cheese  flower (seeds)  toilet cleaner  white bread  ...   9659  \\\n",
+       "0               NaN             NaN             NaN          NaN  ...    NaN   \n",
+       "1               NaN             NaN             NaN          NaN  ...    NaN   \n",
+       "2               NaN             NaN             NaN          NaN  ...    NaN   \n",
+       "3               NaN             NaN             NaN          NaN  ...    NaN   \n",
+       "4               NaN             NaN             NaN          NaN  ...    NaN   \n",
+       "\n",
+       "   9660  9661  9662  9663  9664  9665  9666  9667  9668  \n",
+       "0   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
+       "1   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
+       "2   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
+       "3   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
+       "4   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
+       "\n",
+       "[5 rows x 9835 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df_new_complete.head()"
+   ]
   },
   {
    "cell_type": "code",
