--- a/read_ds_dpp.ipynb
+++ b/read_ds_dpp.ipynb
@@ -3899,6 +3899,7 @@
    ],
    "source": [
     "# aggiungiamo item fittizi per avere una matrice quadrata\n",
+    "# il problema è che aggiungengo troppi zeri si perde troppo utilità (NB gli item son 160)\n",
     "zero_data_to_add = np.zeros(shape=(len(df_dummies),len(df_dummies)-len(columns)))\n",
     "columns_to_add = [x for x in range(0,len(df_dummies)-len(columns))] \n",
     "df_to_add = pd.DataFrame(zero_data_to_add, columns=columns_to_add,dtype='uint8')\n"
@@ -3906,18 +3907,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 66,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "df_new_complete = pd.concat([df_new, df_to_add], axis=1)\n"
+    "# quindi riduciamo il tutto a 200 righe e 200 colonne\n",
+    "df_new_complete = pd.concat([df_new, df_to_add], axis=1)\n",
+    "df_new_complete = df_new_complete.iloc[:200,:200]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 70,
    "metadata": {
     "collapsed": false
    },
@@ -3941,16 +3944,16 @@
        "      <th>toilet cleaner</th>\n",
        "      <th>white bread</th>\n",
        "      <th>...</th>\n",
-       "      <th>9659</th>\n",
-       "      <th>9660</th>\n",
-       "      <th>9661</th>\n",
-       "      <th>9662</th>\n",
-       "      <th>9663</th>\n",
-       "      <th>9664</th>\n",
-       "      <th>9665</th>\n",
-       "      <th>9666</th>\n",
-       "      <th>9667</th>\n",
-       "      <th>9668</th>\n",
+       "      <th>24</th>\n",
+       "      <th>25</th>\n",
+       "      <th>26</th>\n",
+       "      <th>27</th>\n",
+       "      <th>28</th>\n",
+       "      <th>29</th>\n",
+       "      <th>30</th>\n",
+       "      <th>31</th>\n",
+       "      <th>32</th>\n",
+       "      <th>33</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -4076,7 +4079,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 9835 columns</p>\n",
+       "<p>5 rows × 200 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -4087,24 +4090,24 @@
        "3              0            0         0    0             0               0   \n",
        "4              0            0         0    0             0               0   \n",
        "\n",
-       "   specialty cheese  flower (seeds)  toilet cleaner  white bread  ...   9659  \\\n",
-       "0                 0               0               0            0  ...      0   \n",
-       "1                 0               0               0            0  ...      0   \n",
-       "2                 0               0               0            0  ...      0   \n",
-       "3                 0               0               0            0  ...      0   \n",
-       "4                 0               0               0            0  ...      0   \n",
+       "   specialty cheese  flower (seeds)  toilet cleaner  white bread ...  24  25  \\\n",
+       "0                 0               0               0            0 ...   0   0   \n",
+       "1                 0               0               0            0 ...   0   0   \n",
+       "2                 0               0               0            0 ...   0   0   \n",
+       "3                 0               0               0            0 ...   0   0   \n",
+       "4                 0               0               0            0 ...   0   0   \n",
        "\n",
-       "   9660  9661  9662  9663  9664  9665  9666  9667  9668  \n",
-       "0     0     0     0     0     0     0     0     0     0  \n",
-       "1     0     0     0     0     0     0     0     0     0  \n",
-       "2     0     0     0     0     0     0     0     0     0  \n",
-       "3     0     0     0     0     0     0     0     0     0  \n",
-       "4     0     0     0     0     0     0     0     0     0  \n",
+       "   26  27  28  29  30  31  32  33  \n",
+       "0   0   0   0   0   0   0   0   0  \n",
+       "1   0   0   0   0   0   0   0   0  \n",
+       "2   0   0   0   0   0   0   0   0  \n",
+       "3   0   0   0   0   0   0   0   0  \n",
+       "4   0   0   0   0   0   0   0   0  \n",
        "\n",
-       "[5 rows x 9835 columns]"
+       "[5 rows x 200 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4116,21 +4119,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 71,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'size' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-45-7de3f80fe71f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msize\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf_new_complete\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'size' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "200"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -4139,13 +4141,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "200"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "size(df_new_complet[1])"
+    "len(df_new_complete.iloc[1])"
    ]
   },
   {
