fix algorithm python

--- a/read_ds_dpp.ipynb
+++ b/read_ds_dpp.ipynb
@@ -1920,7 +1920,7 @@
     }
    ],
    "source": [
-    "df_truncate.iloc[order]"
+    "df_truncate.iloc[order][order]"
    ]
   },
   {
@@ -1943,7 +1943,7 @@
    ],
    "source": [
     "#M = sps.csr_matrix(df_truncate.iloc[order])\n",
-    "new_df = df_truncate.iloc[order]\n",
+    "new_df = df_truncate.iloc[order][order]\n",
     "plt.spy(new_df)\n",
     "plt.show()"
    ]
