--- a/rcm_with_function.ipynb
+++ b/rcm_with_function.ipynb
@@ -74,7 +74,7 @@
     "        lista_sensibili = df_square.columns[-num_sensibile:]\n",
     "        # plot matrice sparsa iniziale\n",
     "        # plt\n",
-    "        ax1.spy(df_square, marker='.', markersize='0.6')\n",
+    "        ax1.spy(df_square, marker='.', markersize='1')\n",
     "        #ax1.show()\n",
     "\n",
     "        # applicazione algoritmo RCM\n",
@@ -92,8 +92,7 @@
     "        # df bandizzato\n",
     "        df_square_band = df_square.iloc[order][column_reordered]\n",
     "        # plotto\n",
-    "        ax2.spy(df_square_band, marker='.', markersize='0.6')\n",
-    "        \n",
+    "        ax2.spy(df_square_band, marker='.', markersize='1')\n",
     "        #ax2.show()\n",
     "        plt.show()\n",
     "        # banda dataframe inizale\n",
@@ -160,14 +159,14 @@
     "        con gli items sensibili (vedi paper per teoria)\n",
     "    \"\"\"\n",
     "    # calcolo histogram per i dati sensibili\n",
-    "    hist = compute_hist(dataframe_bandizzato,items_sensibili)\n",
+    "    hist = compute_hist(dataframe_bandizzato, items_sensibili)\n",
     "    # lunghezza del dataframe\n",
     "    remaining = len(dataframe_bandizzato)\n",
     "    # gruppi anonimizzati\n",
     "    # G = pd.DataFrame(columns=dataframe_bandizzato.columns)\n",
     "\n",
     "    # inidice delle righe delle transazioni sensibili non ripetute\n",
-    "    transazioni_sensibili = list(set(list(np.where(dataframe_bandizzato[items_sensibili] == 1)[0])))\n",
+    "    transazioni_sensibili = set(list(np.where(dataframe_bandizzato[items_sensibili] == 1)[0]))\n",
     "    # indice delle transizioni sensibili con mapping 1-1 con item_sensibile_per_transizione\n",
     "    # transazioni_sensibili_completa[i] --> indice della transizione\n",
     "    # item_sensibile_per_transazioni[i] --> item sensibile per la transizione sopra\n",
@@ -175,9 +174,9 @@
     "    hash_transiction = dict()\n",
     "    # item sensibili della transazione iesime\n",
     "    item_sensibile_per_transazioni = list(np.where(dataframe_bandizzato[items_sensibili] == 1)[1])\n",
+    "\n",
     "    # riempo il dizionario (hash_map) indicizzata con il numero della riga\n",
     "    for t in transazioni_sensibili:\n",
-    "        # primo elemento della tupla sono gli indici\n",
     "        index_t = np.where(np.array(transazioni_sensibili_completa) == t)[0]\n",
     "        hash_transiction[t] = [item_sensibile_per_transazioni[i] for i in index_t]\n",
     "\n",
@@ -189,8 +188,7 @@
     "        #    print(len(transazioni_sensibili))\n",
     "        #    print(len(item_sensibile_per_transazioni))\n",
     "        #    print(transazioni_sensibili[0])\n",
-    "        #    print(lc_t[t])\n",
-    "\n"
+    "        #    print(lc_t[t])\n"
    ]
   },
   {
