add new Main file

--- a/CAHD_v2_classi.ipynb
+++ b/CAHD_v2_classi.ipynb
@@ -234,22 +234,21 @@
     "        cond = max(indice_transizione_sensibile - alpha_p - k, -1)\n",
     "        i = indice_transizione_sensibile - 1;\n",
     "        while (i > cond):\n",
-    "            if i not in self.transizioni_sensibili_all:\n",
-    "                lc.append(i)\n",
+    "            if self.check_conflict(indice_transizione_sensibile, i):\n",
+    "                k = k + 1\n",
     "            else:\n",
-    "                if self.check_conflict(indice_transizione_sensibile, i):\n",
-    "                    k = k + 1\n",
+    "                # controllo che nella lista non vi siano gia delle\n",
+    "                # transizioni con quelli item sensibili\n",
+    "                # se si non la posso inserire\n",
+    "                conflitto_lista = False\n",
+    "                for index in lc:\n",
+    "                    if self.check_conflict(index, i):\n",
+    "                        conflitto_lista = True\n",
+    "                        break\n",
+    "                if not conflitto_lista:\n",
+    "                    lc.append(i)\n",
     "                else:\n",
-    "                    # controllo che nella lista non vi siano gia delle transizioni con quelli item sensibili\n",
-    "                    # se si non la posso inserire\n",
-    "                    conflitto_lista = False\n",
-    "                    for index in lc:\n",
-    "                        if self.check_conflict(index, i):\n",
-    "                            conflitto_lista = True\n",
-    "                    if not conflitto_lista:\n",
-    "                        lc.append(i)\n",
-    "                    else:\n",
-    "                        k = k + 1\n",
+    "                    k = k + 1\n",
     "\n",
     "            cond = max(indice_transizione_sensibile - alpha_p - k, -1)\n",
     "            i -= 1\n",
@@ -259,28 +258,38 @@
     "        cond = min(indice_transizione_sensibile + alpha_p + k, len(self.dataframe_bandizzato))\n",
     "        i = indice_transizione_sensibile + 1\n",
     "        while(i < cond):\n",
-    "            if i not in self.transizioni_sensibili_all:\n",
-    "                lc.append(i)\n",
+    "            \n",
+    "            if self.check_conflict(indice_transizione_sensibile, i):\n",
+    "                k = k + 1\n",
     "            else:\n",
-    "                if self.check_conflict(indice_transizione_sensibile, i):\n",
-    "                    k = k + 1\n",
+    "                conflitto_lista = False\n",
+    "                for index in lc:\n",
+    "                    if self.check_conflict(index, i):\n",
+    "                        conflitto_lista = True\n",
+    "                        break\n",
+    "                if not conflitto_lista:\n",
+    "                    lc.append(i)\n",
     "                else:\n",
-    "                    conflitto_lista = False\n",
-    "                    for index in lc:\n",
-    "                        if self.check_conflict(index, i):\n",
-    "                            conflitto_lista = True\n",
-    "                    if not conflitto_lista:\n",
-    "                        lc.append(i)\n",
-    "                    else:\n",
-    "                        k = k + 1\n",
+    "                    k = k + 1\n",
     "            cond = min(indice_transizione_sensibile + alpha_p + k, len(self.dataframe_bandizzato))\n",
     "            i += 1\n",
+    "        # controllo se per caso rimangano item sensibili nella lista allora li rimuovo\n",
+    "        to_remove = list()\n",
+    "        for i in range(0,len(lc)-1):\n",
+    "            for j in range(i+1,len(lc)):\n",
+    "                if self.check_conflict(lc[i],lc[j]):\n",
+    "                    to_remove.append(lc[j])\n",
+    "                    #print(\"conflitto\")\n",
+    "        to_remove = list(set(to_remove))\n",
+    "        #print(to_remove)\n",
+    "        for remove in to_remove:\n",
+    "            lc.remove(remove)\n",
     "\n",
     "        error = False\n",
     "        if len(lc) < self.grado_privacy:\n",
     "            error = True\n",
     "\n",
-    "        return lc,error\n",
+    "        return lc, error\n",
     "\n",
     "        \n",
     "    \n",
