--- a/rcm_with_function.ipynb
+++ b/rcm_with_function.ipynb
@@ -149,23 +149,20 @@
     "    cond = max(indice_transizione_sensibile - alpha_p - k, -1)\n",
     "    i = indice_transizione_sensibile - 1;\n",
     "    while (i > cond):\n",
-    "        if i not in all_transazioni_sensibili:\n",
-    "            lc.append(i)\n",
+    "        if check_conflict(dataframe, indice_transizione_sensibile, i, item_sensibili):\n",
+    "            k = k + 1\n",
     "        else:\n",
-    "            if check_conflict(dataframe, indice_transizione_sensibile, i, item_sensibili):\n",
-    "                k = k + 1\n",
+    "            # controllo che nella lista non vi siano gia delle transizioni con quelli item sensibili\n",
+    "            # se si non la posso inserire\n",
+    "            conflitto_lista = False\n",
+    "            for index in lc:\n",
+    "                if check_conflict(dataframe, index, i, items_sensibili):\n",
+    "                    conflitto_lista = True\n",
+    "            if not conflitto_lista:\n",
+    "                lc.append(i)\n",
     "            else:\n",
-    "                # controllo che nella lista non vi siano gia delle transizioni con quelli item sensibili\n",
-    "                # se si non la posso inserire\n",
-    "                conflitto_lista = False\n",
-    "                for index in lc:\n",
-    "                    if check_conflict(dataframe, index, i, items_sensibili):\n",
-    "                        conflitto_lista = True\n",
-    "                if not conflitto_lista:\n",
-    "                    lc.append(i)\n",
-    "                else:\n",
-    "                    k = k + 1\n",
-    "                        \n",
+    "                k = k + 1\n",
+    "\n",
     "        cond = max(indice_transizione_sensibile - alpha_p - k, -1)\n",
     "        i -= 1\n",
     "        \n",
@@ -174,22 +171,28 @@
     "    cond = min(indice_transizione_sensibile + alpha_p + k, len(dataframe))\n",
     "    i = indice_transizione_sensibile + 1\n",
     "    while(i < cond):\n",
-    "        if i not in all_transazioni_sensibili:\n",
-    "            lc.append(i)\n",
+    "        if check_conflict(dataframe, indice_transizione_sensibile, i, items_sensibili):\n",
+    "            k = k + 1\n",
     "        else:\n",
-    "            if check_conflict(dataframe, indice_transizione_sensibile, i, items_sensibili):\n",
-    "                k = k + 1\n",
+    "            conflitto_lista = False\n",
+    "            for index in lc:\n",
+    "                if check_conflict(dataframe, index, i, items_sensibili):\n",
+    "                    conflitto_lista = True\n",
+    "            if not conflitto_lista:\n",
+    "                lc.append(i)\n",
     "            else:\n",
-    "                conflitto_lista = False\n",
-    "                for index in lc:\n",
-    "                    if check_conflict(dataframe, index, i, items_sensibili):\n",
-    "                        conflitto_lista = True\n",
-    "                if not conflitto_lista:\n",
-    "                    lc.append(i)\n",
-    "                else:\n",
-    "                    k = k + 1\n",
+    "                k = k + 1\n",
     "        cond = min(indice_transizione_sensibile + alpha_p + k, len(dataframe))\n",
     "        i += 1\n",
+    "    \n",
+    "    to_remove = list()\n",
+    "    for i in range(0,len(lc)-1):\n",
+    "        for j in range(i+1,len(lc)):\n",
+    "            if check_conflict(datframe,lc[i],lc[j],items_sensibili):\n",
+    "                to_remove.append(lc[j])\n",
+    "    to_remove = list(set(to_remove))\n",
+    "    for remove in to_remove:\n",
+    "        lc.remove(remove)\n",
     "    \n",
     "    error = False\n",
     "    if len(lc) < p:\n",
