--- a/rcm_with_function.ipynb
+++ b/rcm_with_function.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -10,10 +10,10 @@
     {
      "data": {
       "text/plain": [
-       "(4372, 4223)"
+       "(59601, 481)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -27,26 +27,27 @@
     "import scipy.sparse as sps\n",
     "from random import randint\n",
     "import operator\n",
-    "df = pd.read_csv('online_retail_transaction.csv',header=None,index_col=None)\n",
+    "#df = pd.read_csv('Data/online_retail_transaction.csv',header=None,index_col=None)\n",
+    "df = pd.read_csv('Dataset Paper/dataBMS1_transiction.csv',header=None,index_col=None)\n",
     "df.shape # dimensione originale"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def compute_band_matrix(original_dataset=None, dim_finale=1000, nome__file_item=None, num_sensibile=1):\n",
+    "def compute_band_matrix(original_dataset=None, dim_finale=1000, nome_file_item=None, num_sensibile=1):\n",
     "    \"\"\"\n",
     "        Compute band_matrix , permutazione casuale di righe e colonne\n",
     "        estrapola a caso item_sensibili\n",
     "    \"\"\"\n",
     "    if original_dataset is not None and len(original_dataset) >= dim_finale and len(original_dataset.columns) >= dim_finale:\n",
     "        # leggo nomi items\n",
-    "        file = open(nome__file_item, \"r\")\n",
+    "        file = open(nome_file_item, \"r\")\n",
     "        items = file.read().splitlines()\n",
     "        # permuto righe e colonne del df inizale e prendo le prime :dim_finale\n",
     "        np.random.seed(seed=13)\n",
@@ -63,16 +64,7 @@
     "        # selezioni gli utlimi num_sensibili come item sensibili\n",
     "        # check se esiste almeno un item sensibile\n",
     "\n",
-    "        # remove dati sensibili add zero --> compute RCM --> remove zero e add dati sensibili\n",
-    "        # df_sensibili = df_square[df_square.columns[-num_sensibile:]]\n",
-    "        # df_common_items = df_square[df_square.columns[0:-num_sensibile]]\n",
-    "        # zero_data_to_add = np.zeros(shape=(len(df_common_items),num_sensibile))\n",
-    "        # columns_to_add = [\"temp_\"+str(x) for x in range(0,num_sensibile)]\n",
-    "        # df_zeri = pd.DataFrame(zero_data_to_add, columns=columns_to_add,index=df_common_items.index,dtype='uint8')\n",
-    "        # df_square = pd.concat([df_common_items,df_zeri],axis=1)\n",
-    "        # print(df_zeri.shape) dim_finalexnum_sensibili\n",
-    "        # print(df_square.shape)\n",
-    "        # subplot with y condiviso\n",
+    "    \n",
     "\n",
     "        f, (ax1, ax2) = plt.subplots(1, 2, sharey=True)\n",
     "        \n",
@@ -113,12 +105,83 @@
     "        bw = max(i-j) + 1\n",
     "        print(\"Bandwidth after RCM\", bw)\n",
     "        return df_square_band, items_final, lista_sensibili\n",
+    "    \n",
+    "    elif original_dataset is not None and len(original_dataset) >= dim_finale:\n",
+    "        # devo essere sicuro di avere il numero di righe giusto\n",
+    "        # allora devo squadrarlo con la dimensione finale definita dall'utente\n",
+    "        file = open(nome_file_item, \"r\")\n",
+    "        items = file.read().splitlines()\n",
+    "        columns = original_dataset.columns\n",
+    "        zero_data_to_add = np.zeros(shape=(len(original_dataset),len(original_dataset)-len(columns)))\n",
+    "        # aggiungo li zero con la dimensione finale relativa\n",
+    "        #zero_data_to_add.shape\n",
+    "        columns_to_add = [\"temp\"+str(x) for x in range(0,len(df_ridotto)-len(columns))]\n",
+    "        #columns_to_add\n",
+    "        df_to_add = pd.DataFrame(zero_data_to_add, columns=columns_to_add,index=original_dataset.index,dtype='uint8')\n",
+    "        #df_to_add\n",
+    "        # creo il dataset completo aggiungendo tutti gli zeri che mancano\n",
+    "        original_dataset = pd.concat([original_dataset, df_to_add], axis=1)\n",
+    "        # permuto righe e colonne del df inizale e prendo le prime :dim_finale\n",
+    "        np.random.seed(seed=13)\n",
+    "        random_column = np.random.permutation(original_dataset.shape[1])\n",
+    "        random_row = np.random.permutation(original_dataset.shape[0])[:dim_finale]\n",
+    "        # recupero gli item selezionati nel relativo ordine == colonne\n",
+    "        items_reordered = [items[i] for i in random_column]\n",
+    "        # df selezionato e square\n",
+    "        \n",
+    "        # eliminare le righe nulle a priori\n",
+    "        df_square = df.iloc[random_row][random_column];\n",
+    "        # eliminare solo se items sensibili nulli\n",
+    "        \n",
+    "        \n",
+    "\n",
+    "        f, (ax1, ax2) = plt.subplots(1, 2, sharey=True)\n",
+    "        \n",
+    "        # check che le colonne sensibili non siano nulle\n",
+    "        lista_sensibili = df_square.columns[-num_sensibile:]\n",
+    "        # plot matrice sparsa iniziale\n",
+    "        # plt\n",
+    "        ax1.spy(df_square, marker='.', markersize='1')\n",
+    "        #ax1.show()\n",
+    "\n",
+    "        # applicazione algoritmo RCM\n",
+    "        sparse = csr_matrix(df_square)\n",
+    "        order = reverse_cuthill_mckee(sparse)\n",
+    "\n",
+    "        # solo se add gli 0\n",
+    "        # riordino i dati sensibili\n",
+    "        # df_sensibili = df_sensibili.iloc[order]\n",
+    "\n",
+    "        # ora devo prendere gli item selzionati prima e riordinarli ancora\n",
+    "        # secondo quello scritto in order quindi\n",
+    "        items_final = [items_reordered[i] for i in order]\n",
+    "        column_reordered = [df_square.columns[i] for i in order]\n",
+    "        items_final = dict(zip(column_reordered,items_final))\n",
+    "\n",
+    "        # df bandizzato\n",
+    "        df_square_band = df_square.iloc[order][column_reordered]\n",
+    "        # plotto\n",
+    "        ax2.spy(df_square_band, marker='.', markersize='1')\n",
+    "        #ax2.show()\n",
+    "        plt.show()\n",
+    "        # banda dataframe inizale\n",
+    "        [i, j] = np.where(df_square == 1)\n",
+    "        bw = max(i-j) + 1\n",
+    "        print(\"Bandwidth first RCM\", bw)\n",
+    "\n",
+    "        # banda dataframe dopo RCM\n",
+    "        [i, j] = np.where(df_square_band == 1)\n",
+    "        bw = max(i-j) + 1\n",
+    "        print(\"Bandwidth after RCM\", bw)\n",
+    "    \n",
+    "        return df_square_band, items_final, lista_sensibili\n",
+    "            \n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -239,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -427,32 +490,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXQAAAD8CAYAAABn919SAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAEY5JREFUeJzt3X+IZeV9x/HPp7vbuGI3ujqsE9d0W9kGRrEqg7VYStBd\nak2I9r8ELPtHYCG0xdCWsP5TTKHUFhryTxFsErrUNqGQgosEwnajhEAxuavGumPSbSBJTWbdiWIm\nIWuz6rd/zFk7mV/3zDnPuec8z32/YJh779z7nO858+xnzzzP+eGIEAAgf7/UdwEAgDQIdAAoBIEO\nAIUg0AGgEAQ6ABSCQAeAQgwq0G1/zvZ52y+uem2v7ZO2z1bfr0rQ5sO2f2D7+err3ga1Xm/7KdsL\nts/YfjBRvZu127hm25fZ/rrtb1ZtfjJRrZu123r7Vu3ssP2c7SdT1NuXLvr1Fu222vY59evq89n1\n7U77dUQM5kvS70q6TdKLq177W0nHqsfHJP1NgjYflvTnLWudlXRb9fhXJP2XpLkE9W7WbuOaJVnS\nFdXjXZKekXRHglo3a7f19q3a/FNJ/yLpyRR9oa+vLvr1Fu222vY59esxfXCwfbvLfj2oPfSI+Kqk\n19a8fJ+k49Xj45LuT9BmaxGxGBHPVo9/IuklSdepfb2btdum1oiIn1ZPd1VfkaDWzdptzfZ+SR+Q\n9JlVL7eqty9d9Ost2m0lp35dtZVV3+66Xw8q0DexLyIWq8fnJO1L1O6f2H6h+rO11Z/utg9IulUr\n/4snq3dNu1KLmqs/856XdF7SyYhIUusm7baqtfJpSZ+Q9Paq17rqC33ocl2S9O0c+nXVXk59u9N+\nnUOgvyNW/iZJsQf4qKRfl3SLpEVJf9e0IdtXSPqipI9HxPLqn7Wpd4N2W9UcEW9FxC2S9ku63fZN\nKWrdpN1Wtdr+oKTzEXF6i+Wm6gu9S7wuSfp2Lv26qieLvj2Jfp1DoL9ie1aSqu/n2zYYEa9Uv6y3\nJf2DpNubtGN7l1Y65z9HxL+lqnejdlPVHBGvS3pK0j0pat2o3QS13inpQ7a/K+kLku6y/XjKegeg\nk3VJ0U9y7NdVW0Pv25336xwC/YSkI9XjI5KeaNvgpY1X+QNJL2723i3asKTPSnopIj616ket6t2s\n3TY1256xfWX1eLekw5K+laDWDdttu30j4qGI2B8RByR9WNJXIuKBtvUOTCfr0nbb59Svq89n07cn\n0q+3O4va5Zekz2vlz5iLkl6W9FFJV0s6JemspH+XtDdBm/8k6T8lvVBtzNkGtf6OVv40ekHS89XX\nvQnq3azdxjVLulnSc9VnX5T0F9XrbWvdrN3W23fVMt6v/z8aoFW9JfXrrvp2Tv06577dVb921SAA\nIHM5DLkAAGog0AGgEAQ6ABSCQAeAQhDoAFCIwQe67aO5tJtTrbm121WtfcppO9FuHrW2CnTb99j+\ntu3/tn0sVVFrdPUPuYt2c6o1t3aLC3TltZ1oN4NaGwe67R2S/l7S72vlMpgfsT2XqjAAwPY0PrHI\n9m9Lejgifq96/pAkRcRfb/aZa665Jg4cOLCt5SwtLWlmZqZRjZNuN6dac2u3TpunT5/+UUSkX6Ea\nhtK3c/qd5tZun7XW7ds7W9RxnaT/WfX8ZUm/tdUHDhw4oNFo1GKRwOZsf6+vZdO30aW6fbvzSVHb\nR22PbI+Wlpa6XhwwMfRtDE2bQP+BpOtXPd9fvfYLIuKxiJiPiPku/lwB+kLfxtC0CfRvSDpo+9ds\n/7JWLgd5Ik1ZAIDtahzoEfGmpD+W9GWt3B/wXyPizDY+rzM//LG42iMApNFqDD0ivhQRvxERN0TE\nX23nswuLy/rY489qYXF5/JsBAGP1dqbo3OwePfrAbZqb3dNXCQBQlDaHLbZiWze+5919LR4AijP4\na7kAAOoh0AGgEAQ6ABSCQAeAQhDoAFAIAh0ACkGgA0AhCHQAKASBDgCFINABoBAEOgAUgkAHgEIQ\n6ABQCAIdAApBoIu7J01Sqm29tp2IkHddtjtFjUNAn0QTBLq4e9IkpdrWa9tZWFzWziuvvSFFjUNA\nn0QTnuQewPz8fIxGo4ktr66I0MLisuZm98h23+UULdW2XttORGjHuy5fePvnF25MWG5tqfs2fRKr\n2T4dEfPj3tfbHYuGhLsnTU6qbb22HduKi29caN3wQNAn0QRDLkAmGFfHOAQ6kAnG1TEOgQ5kYm52\njx594DbNze7puxQMFGPoQCYYV8c47KEDQCEIdAAoBIEOAIUg0AGgEAQ6ABSCQAeAQhDoAFAIAh0A\nCkGgA0AhCHTUttFNJbZ7saiuLjBV2g0ugCYIdNS20U0ltnuxqK4uMFXaDS6AJsYGuu3P2T5v+8VV\nr+21fdL22er7Vd2WiSFYe3GoJheL6uoCU3Oze/Tm6+e+k7RRIDN19tD/UdI9a147JulURByUdKp6\njsJdujjUpTvorH3epI2UtZV0gwugibGBHhFflfTampfvk3S8enxc0v2J6wIAbFPTMfR9EbFYPT4n\naV+iegAADbWeFI2VwxU2PWTB9lHbI9ujpaWltosDBoO+jaFpGuiv2J6VpOr7+c3eGBGPRcR8RMzP\nzMw0XBwwPPRtDE3TQD8h6Uj1+IikJ9KUAwBoqs5hi5+X9B+S3mf7ZdsflfSIpMO2z0o6VD0HAPRo\n7D1FI+Ijm/zo7sS1AABa4ExRACgEgQ4Ahegt0Lu6SFPutZSObQ10p7dA7+oiTbnXUjq2NdCd3gK9\nq4s05V5L6djWQHfGHuXSlUsXaRqCIdVSOrY10B0mRQGgEAR6z5gkbIbtBqxHoPeMScJm2G7AegR6\nz5gkbIbtBqzX26QoVjBJ2AzbDViPPfQNMD6bn4iQd122u+86UimtD5a2PkNFoG+A8dn8LCwua+eV\n197Qdx2plNYHS1ufofIk/8ecn5+P0Wg0seU1FRFaWFzW3Oye5DczRjciQjvedfnC2z+/cGMfy0/d\nt0vrg6Wtz6TZPh0R8+Pexxj6BhifzY9txcU3LvRdRyql9cHS1meoGHIBErhw8S3Gh7fAGPpkEOhA\nAt9/9WeMD2+BMfTJINCBBN579eUcE78FzhuYDMbQgQR279rBZN8WGEOfDPbQAaAQBDqAzjEpOhkE\nOoDOMSk6GQQ6gM4xKToZTIoC6ByTopPBHjqAzjGGPhkEOoDOMYY+GQQ6gM4xhj4ZjKED6Bxj6JPB\nHjqQ2Nrx4iGPH6eqbVw7G/18yNslVwQ6kNja8eIhjx+nqm1cOxv9fMjbJVfc4ALFqHsTgC6s7ttr\nb+Yw5Js7pKptXDsb/XzI22VouMEF0JO148VDHj9OVdu4djb6+ZC3S64YcgGAQhDoAHrBpGh6YwPd\n9vW2n7K9YPuM7Qer1/faPmn7bPX9qu7LBVAKJkXTq7OH/qakP4uIOUl3SPoj23OSjkk6FREHJZ2q\nngNALZxslN7YQI+IxYh4tnr8E0kvSbpO0n2SjldvOy7p/q6KBFCeS5OiHOGSzrbG0G0fkHSrpGck\n7YuIxepH5yTtS1pZZqZxPLDJOk/qRJahG3fyUe7r18Q0rnNqtQPd9hWSvijp4xHxC4NesfIb2PC3\nYPuo7ZHt0dLSUqtih2waxwObrPOkTmSZhDZ9e9zJR0NYv0mbxnVOrdaJRbZ3SXpS0pcj4lPVa9+W\n9P6IWLQ9K+npiHjfVu2UfGLRNJ4k0WSduzyRZSgnFtUx7uQj+tN0rHNddft2naNcLOmzkl66FOaV\nE5KOVI+PSHqiSaGlmMbxwCbrnGo75b6919Y/7vk0mMZ1Tq3OkMudkv5Q0l22n6++7pX0iKTDts9K\nOlQ9B5DANIwnM2+QXp2jXL4WEY6ImyPilurrSxHxakTcHREHI+JQRLw2iYKBaTAN48nMG6THmaLA\nAE3DMdpr13Ea1rlrXJwLGKBpuHBVThcxywV76ABQCAJ94PqcKGKSCsgLgT5wfU4UMUkF5IVAH7g+\nJ4qYpALywqTowPU5UcQkFZAX9tCBTDCngXEIdCATzGlgHAIdyARzGhiHMXQgE8xpYBz20AGgEAQ6\nABSCQAeAQhDoAFAIAh0ACkGgA+gcJ0VNBoEOoHOcFDUZBDqAznFS1GRwYhGAznFS1GSwhw4AhSDQ\nAaAQBDoAFIJAB4BCEOgAWlt7nHmd4867OjZ9mo95J9ABtLb2OPM6x513dWz6NB/z7kn+LzY/Px+j\n0Whiy8N0sX06Iub7WPa09+2I0MLisuZm98j2uud1PtNVLSWo27c5Dh1Aa2uPM69z3HlXx6ZP8zHv\nDLkAQCEIdEzUNE9YTbONfu9NJlKbLmtaEOiYqGmesJpmG/3em0ykNl3WtGBSFBPV5YQVk6LDtdHv\nvclEatNl5Y5JUQzSNE9YTbONfu9NJlKbLmtaMORS0zSPywE5meZ/qwR6TdM8LgfkZJr/rY4NdNuX\n2f667W/aPmP7k9Xre22ftH22+n5V9+X2hwv0A3mY5n+rdfbQ/1fSXRHxm5JukXSP7TskHZN0KiIO\nSjpVPS/WpXG5UiZZgFJN87/VsYEeK35aPd1VfYWk+yQdr14/Lun+TioEANRSawzd9g7bz0s6L+lk\nRDwjaV9ELFZvOSdp3yafPWp7ZHu0tLSUpGhgCOjbGJpagR4Rb0XELZL2S7rd9k1rfh5a2Wvf6LOP\nRcR8RMzPzMy0LhgYCvo2hmZbR7lExOuSnpJ0j6RXbM9KUvX9fPryAAB11TnKZcb2ldXj3ZIOS/qW\npBOSjlRvOyLpia6KBACMV2cPfVbSU7ZfkPQNrYyhPynpEUmHbZ+VdKh6vqULF99KfiGeFIZUCwA0\nVecolxci4taIuDkiboqIv6xefzUi7o6IgxFxKCJeG9fW91/9WfIL8aQwpFoAoKmJnin63qsvf+dg\n/yEd/D+kWgCgqYlenGv3rh3vHOw/pAvoDKkWAGiKa7kAKEqTG2eUMo9GoAMoSpMbZ5Qyj0agAyjK\n2jmxOnNkpcyjcYMLAEVpcuOMUubR2EMHgEIQ6ABQCAIdAApBoANAIQh0ACgEgQ4AhSDQAaAQBDoA\nFIJAB4BCEOgAUAgCHQAKQaADQCEIdAAoBIEOAIUg0FGEiJB3Xba77zqAPhHoKMLC4rJ2XnntDX3X\nAfSJQEcR5mb36M3Xz32n7zqAPhHoKIJtxcU3LvRdB9AnAh1ZKuUu7UBKBDqyVMpd2oGUCHRkqZS7\ntAMp7ey7AKCJUu7SDqTEHjoAFIJAB4BCEOgAUAgCHQAKQaADQCEIdAAoRO1At73D9nO2n6ye77V9\n0vbZ6vtV3ZUJABhnO3voD0p6adXzY5JORcRBSaeq5wCAntQKdNv7JX1A0mdWvXyfpOPV4+OS7k9b\nGgBgO+ruoX9a0ickvb3qtX0RsVg9PidpX8rCAADbMzbQbX9Q0vmIOL3Ze2LlkncbXvbO9lHbI9uj\npaWl5pUCA0PfxtDU2UO/U9KHbH9X0hck3WX7cUmv2J6VpOr7+Y0+HBGPRcR8RMzPzMwkKhvoH30b\nQzM20CPioYjYHxEHJH1Y0lci4gFJJyQdqd52RNITnVUJABirzXHoj0g6bPuspEPVcwBAT7Z1+dyI\neFrS09XjVyXdnb4kAEATnCkKAIUg0AGgEAQ6ABSCQAeAQhDoAFAIAh0ACkGgA0AhCHQAKASBDgCF\nINABoBAEOgAUgkAHgEIQ6ABQCAIdAApBoANAIQh0ACgEgQ4AhSDQAaAQBDoAFIJAB4BCEOgAUAgC\nHQAKQaADQCEIdAAoBIGOLEWEzvzwx4qIvksBBoNAR5YWFpf1scef1cLict+lAINBoCNLc7N79OgD\nt2ludk/fpQCDsbPvAoAmbOvG97y77zKAQWEPHQAKQaAjS0yKAusR6MgSk6LAegQ6ssSkKLAek6LI\nEpOiwHq97aEzBoo26D/Aer0FOmOgaIP+A6zXW6AzBoo26D/Aep7kn6y2lyR9b5sfu0bSjzoop4t2\nc6o1t3brtPmrETGTeLm1DKhv5/Q7za3dPmut1bcnGuhN2B5FxHwO7eZUa27tdlVrn3LaTrSbR60c\ntggAhSDQAaAQOQT6Yxm1m1OtubXbVa19ymk70W4GtQ5+DB0AUE8Oe+gAgBoIdAAoBIEOAIUg0AGg\nEAQ6ABTi/wAjLhcYXhOEsgAAAABJRU5ErkJggg==\n",
-      "text/plain": [
-       "<matplotlib.figure.Figure at 0x20055d93a58>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bandwidth first RCM 42\n",
-      "Bandwidth after RCM 11\n"
+     "ename": "MemoryError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mMemoryError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-12-197adbfebb8a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf_square\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mitems\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mitems_sensibili\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcompute_band_matrix\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0moriginal_dataset\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdim_finale\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m500\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnome_file_item\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"Dataset Paper/lista_items_BMS1.txt\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mnum_sensibile\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-8-2658234ade93>\u001b[0m in \u001b[0;36mcompute_band_matrix\u001b[0;34m(original_dataset, dim_finale, nome_file_item, num_sensibile)\u001b[0m\n\u001b[1;32m     71\u001b[0m         \u001b[0mitems\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfile\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msplitlines\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     72\u001b[0m         \u001b[0mcolumns\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0moriginal_dataset\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 73\u001b[0;31m         \u001b[0mzero_data_to_add\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0moriginal_dataset\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0moriginal_dataset\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     74\u001b[0m         \u001b[1;31m# aggiungo li zero con la dimensione finale relativa\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     75\u001b[0m         \u001b[1;31m#zero_data_to_add.shape\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mMemoryError\u001b[0m: "
      ]
     }
    ],
    "source": [
-    "df_square,items,items_sensibili = compute_band_matrix(original_dataset = df, dim_finale = 50, nome__file_item=\"lista_items.txt\",num_sensibile=4)\n"
+    "df_square,items,items_sensibili = compute_band_matrix(original_dataset = df, dim_finale = 500, nome_file_item=\"Dataset Paper/lista_items_BMS1.txt\",num_sensibile=4)\n"
    ]
   },
   {
