add compute all combination of n bit

--- a/rcm_with_function.ipynb
+++ b/rcm_with_function.ipynb
@@ -3574,7 +3574,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import itertools"
+   ]
   }
  ],
  "metadata": {
